syntax = "proto3";

package vertis.anubis.api.test;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "broker/broker_options.proto";

option java_package = "vertis.anubis.api.test";
option java_multiple_files = true;

message Before {
  google.protobuf.StringValue  id = 1;
  int32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterDeleted {
  google.protobuf.StringValue  id = 1;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterReserved {
  reserved "index";
  reserved 2;

  google.protobuf.StringValue  id = 1;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterChanged {
  google.protobuf.StringValue  id = 1;
  uint32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterWrapped {
  google.protobuf.StringValue id = 1;
  google.protobuf.Int32Value index = 2;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterWrappedChange {
  google.protobuf.Int32Value id = 1;
  int32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterUnwrapped {
  string id = 1;
  int32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterRepeated {
  google.protobuf.StringValue  id = 1;
  repeated int32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterRepeatedChanged {
  google.protobuf.StringValue  id = 1;
  repeated uint32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
}

message AfterRepeatedMessageChanged {
  google.protobuf.StringValue  id = 1;
  int32 index = 2;
  repeated AfterReserved ts = 3;
}

message AfterRepeatedMessageInnerChanged {
  google.protobuf.StringValue  id = 1;
  int32 index = 2;
  repeated RecursiveMessage ts = 3;
}

message RecursiveMessage {
  google.protobuf.StringValue  id = 1;
  uint32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
  repeated RecursiveMessage recursive = 4;
}

message WithInnerFoo {
  google.protobuf.StringValue  id = 1;
  int32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
  Foo inner = 4;
}

message WithInnerBar {
  google.protobuf.StringValue  id = 1;
  int32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
  Bar inner = 4;
}

message WithInnerBaz {
  google.protobuf.StringValue  id = 1;
  int32 index = 2;
  repeated google.protobuf.Timestamp ts = 3;
  Baz inner = 4;
}

message Foo {
  string id = 1;
}
message Bar {
  int32 id = 1;
}
message Baz {
  int32 id = 1;
  repeated google.protobuf.Timestamp ts = 3;
}

message DeepInnerFoo {
  InnerFoo inner = 4;
}

message DeepInnerBar {
  InnerBar inner = 4;
}

message DeepInnerBaz {
  InnerBaz inner = 4;
}

message InnerFoo {
  Foo foo = 1;
}
message InnerBar {
  Bar foo = 1;
}
message InnerBaz {
  Baz foo = 1;
}

message PayloadBefore {
  Before data = 1;
}

message PayloadAfter {
  repeated AfterChanged data = 1;
}

message RichEventBefore {
  PayloadBefore payload = 1;
}

message RichEventAfter {
  PayloadAfter payload = 1;
}

message BeforeWoOneOf {
  Bar bar = 1;
}

message AfterWithNewOneOf {
  oneof payload {
     Bar bar = 1;
  }
  Baz baz = 2;
}

message AfterWithExistingOneOf {
  oneof data {
     Bar bar = 1;
     Baz baz = 2;
  }
}

message AncestorEvent {
   option (.broker.config) = {
    name: "broker/my-event",
   };
   string id = 1;
}

message DescendantEvent {
   option (.broker.config) = {
    name: "broker/my-event",
   };
   int32 id = 1;
}